<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.epicodus.madlibs.MainActivity"
    android:background="#000000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@android:color/holo_green_dark"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/submitWordsButton"
        android:layout_alignEnd="@+id/submitWordsButton"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/submitWordsButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let&apos;s Play Mad Libs!"
        android:layout_marginTop="71dp"
        android:id="@+id/textView"
        android:textColor="@color/colorTextIcons"
        android:textSize="30sp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/madLibs"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Play"
        android:id="@+id/submitWordsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Three Words:"
        android:id="@+id/textView2"
        android:textColor="@color/colorTextIcons"
        android:textSize="25sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/madLibs2"
        android:layout_below="@+id/madLibs"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/madLibs3"
        android:layout_below="@+id/madLibs2"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="noun"
        android:id="@+id/textView3"
        android:textColor="@color/colorTextIcons"
        android:textSize="25sp"
        android:layout_alignTop="@+id/madLibs"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="verb"
        android:id="@+id/textView4"
        android:textColor="@color/colorTextIcons"
        android:textSize="25sp"
        android:layout_alignTop="@+id/madLibs2"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="color"
        android:id="@+id/textView5"
        android:textColor="@color/colorTextIcons"
        android:textSize="25sp"
        android:layout_alignTop="@+id/madLibs3"
        android:layout_toLeftOf="@+id/madLibs3"
        android:layout_toStartOf="@+id/madLibs3" />

</RelativeLayout>
